--- a/DotNetSnippets/DotNetSnippets.csproj
+++ b/DotNetSnippets/DotNetSnippets.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="TextCopy" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="Rider*.xml" />
+    </ItemGroup>
+
 </Project>
