--- a/DotNetSnippets/DotNetSnippets.csproj
+++ b/DotNetSnippets/DotNetSnippets.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Build.Locator" Version="1.4.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.0.1" />
